@@ -5,6 +5,14 @@ isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-pac
 
 ##################################################################
 
+opsi-winst/opsi-script (4.12.0.13) stable; urgency=low
+
+  * osparser: for-to loop: fix failure at for x to x loop
+  * oslog: includelogtail: now log includelog at log level 7
+
+-- Detlef Oertel <d.oertel@uib.de>  Wed, 27 Dec 2017:15:00:00 +0200
+
+
 opsi-winst/opsi-script (4.12.0.12) stable; urgency=low
 
   * fix sections in local functions: osparser: doAktionen:
